# Komodo-Secure

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REMEDIATION_CHECKLIST.md  SECURITY_AUDIT_SUMMARY.md  SECURITY_REVIEW.md  VULNERABILITIES.md  app.manifest  build.rs  et --hard badc5aa  komodo_hardened_sandbox.patch  test_file.txt
Core/: firewall.c  sandbox.c  sandbox.h
c_src/: vault_ffi.c  vault_security.c
core_linux/: diamondVaults.c  disabledWrite.cpp  enabledWrite.cpp  lockedfile.c  multiplatform.c  subports.c  vault_ffi.c  vault_ffi.h
src/: build.rs  cli.rs  crypto.rs  gui.rs  hash.rs  immutable.rs  komodo_mb_usage.rs  log.rs  main.rs  path_assistant.rs  sys_info.rs  sysinfo.rs  usb_key.rs  vault.rs
tests/: security_exploit.rs
