[package]
name = "komodo-secure"
version = "0.7.0"
edition = "2021"
build = "build.rs"

[dependencies]
# GUI / TUI
eframe = "0.31.0"
tui = "0.19"
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }
colored = "3.1.1"

# CLI / Interação
clap = "4.6.0"
inquire = "0.9.4"
rustyline = "17.0.2"

# System & FS
sysinfo = "0.38.4"
walkdir = "2"
home = "0.5.12"
notify = "8.2.0"
chrono = "0.4"
ctrlc = "3.5.2"
io = "0.0.2"
duplex = "0.1"       # opcional, pode implementar manual

# Crypto
aes-gcm = "0.10"
rand = "0.8"
argon2 = "0.5"
pbkdf2 = "0.12"
hmac = "0.12"
sha2 = "0.10"

# Utilitários
anyhow = "1.0"
hex = "0.4.3"
color-eyre = "0.6"

# System Unix
nix = { version = "0.31", features = ["user"] }

# Windows
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_System_JobObjects",
    "Win32_Foundation",
    "Win32_System_Threading"
] }
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_JobObjects"
] }

[build-dependencies]
cc = "1.1"
winres = "0.1"